--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
-
+<script src="/assets/js/main.js"></script>
+</body>
 <body>
 
 <header>
