--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
-<script src="/assets/js/main.js"></script>
+<footer>
+  <p>
+    © 2026 Remote Skills Hub ·
+    <a href="/affiliate-disclosure.html">Affiliate Disclosure</a> ·
+    <a href="/privacy-policy.html">Privacy Policy</a> ·
+    <a href="/terms.html">Terms & Conditions</a>
+  </p>
+</footer>
+  <script src="/assets/js/main.js"></script>
 </body>
 <body>
 
