--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <footer>
   <p>
     © 2026 Remote Skills Hub ·
-    <a href="/affiliate-disclosure.html">Affiliate Disclosure</a> ·
+    <a href="/JobUpskill/affiliate-disclosure.html">Affiliate Disclosure</a> ·
     <a href="/privacy-policy.html">Privacy Policy</a> ·
     <a href="/terms.html">Terms & Conditions</a>
   </p>
