--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
     <p>© 2026 Remote Careers Hub · Powered by Alison</p>
   </div>
 </footer>
-
+</head>
+<footer>
+  <p>
+    © 2026 Remote Skills Hub ·
+    <a href="/affiliate-disclosure.html">Affiliate Disclosure</a> ·
+    <a href="/privacy-policy.html">Privacy Policy</a> ·
+    <a href="/terms.html">Terms & Conditions</a>
+  </p>
 </body>
 </html>
