--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
     <a class="cta-button" href="YOUR_ALISON_AFFILIATE_LINK">
       Explore Free Alison Courses
     </a>
+    </head>
+<footer>
+  <p>
+    <a href="/affiliate-disclosure.html">Affiliate Disclosure</a> ·
+    <a href="/privacy-policy.html">Privacy Policy</a> ·
+    <a href="/terms.html">Terms & Conditions</a>
+  </p>
   </section>
 
 </main>
