--- a/index.html
+++ b/index.html
@@ -2,38 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
-  <title>20 Remote Jobs You Can Start With Free Online Courses | Alison</title>
-
-  <meta name="description" content="Discover 20 remote jobs you can start from home with free Alison courses. Learn in-demand skills, earn certificates, and get hired online.">
-
+  <title>PAGE TITLE</title>
+  <meta name="description" content="PAGE DESCRIPTION">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/JobUpskill/assets/css/style.css">
 </head>
-  <script src="/assets/js/main.js"></script>
-</body>
 <body>
 
-<header>
-  <div class="container">
-    <h1>20 Remote Jobs You Can Start With Free Online Courses</h1>
-    <p class="subtitle">
-      Learn job-ready skills, earn certificates, and work from anywhere with Alison.
-    </p>
-
-    <a class="cta-button" href="YOUR_ALISON_AFFILIATE_LINK">
-      Start Free Courses on Alison
+<header class="site-header">
+  <div class="container header-inner">
+    <a href="/JobUpskill/" class="logo">
+      <span class="logo-highlight">Job</span>Upskill
     </a>
+
+    <nav class="nav">
+      <a href="/JobUpskill/">Home</a>
+
+      <div class="dropdown">
+        <button class="dropdown-btn">Remote Jobs ▾</button>
+        <div class="dropdown-content" id="jobs-menu"></div>
+      </div>
+
+      <a href="/JobUpskill/affiliate-disclosure.html">Disclosure</a>
+    </nav>
   </div>
 </header>
 
 <main class="container">
+  <!-- PAGE CONTENT -->
+</main>
 
-  <!-- AFFILIATE DISCLOSURE -->
-  <section>
-    <p class="disclosure">
-      <strong>Affiliate Disclosure:</strong> Some links on this website are affiliate links.
+<footer>
+  <div class="container">
+    <p>© <span id="year"></span> JobUpskill · Built with Alison courses</p>
+    <p>
+      <a href="/JobUpskill/affiliate-disclosure.html">Affiliate Disclosure</a>
+      <a href="/JobUpskill/privacy-policy.html">Privacy Policy</a>
+      <a href="/JobUpskill/terms.html">Terms</a>
+    </p>
+  </div>
+</footer>
+
+<script src="/JobUpskill/assets/js/main.js"></script>
+</body>
+</html>
       If you sign up for Alison through them, I may earn a commission at no extra cost to you.
     </p>
   </section>
