--- a/affiliate-disclosure.html
+++ b/affiliate-disclosure.html
@@ -2,51 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Affiliate Disclosure</title>
-  <meta name="robots" content="noindex">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>Affiliate Disclosure | JobUpskill</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/JobUpskill/assets/css/style.css">
 </head>
 <body>
 
-<header>
-  <div class="container">
-    <h1>Affiliate Disclosure</h1>
-    <p class="subtitle">Transparency & Trust</p>
+<header class="site-header">
+  <div class="container header-inner">
+    <a href="/JobUpskill/" class="logo">
+      <span class="logo-highlight">Job</span>Upskill
+    </a>
   </div>
 </header>
 
 <main class="container">
-  <section>
-    <p>
-      This website contains affiliate links. This means that if you click on a link and make a purchase
-      or sign up for a service, we may earn a commission at no additional cost to you.
-    </p>
+  <h1>Affiliate Disclosure</h1>
 
-    <p>
-      We only recommend courses, tools, and services that we genuinely believe are useful for people
-      looking to build remote careers and work-from-home skills.
-    </p>
+  <p>
+    JobUpskill participates in affiliate marketing programs. This means that
+    some links on this website are affiliate links.
+  </p>
 
-    <p>
-      Our primary affiliate partner is <strong>Alison</strong>, an online learning platform that provides
-      free courses and affordable certificates.
-    </p>
+  <p>
+    If you click on an affiliate link and enroll in a course or service, we may
+    earn a small commission at no extra cost to you.
+  </p>
 
-    <p>
-      Affiliate relationships help us maintain this website, create free content, and continue publishing
-      helpful guides for beginners.
-    </p>
+  <p>
+    We only promote platforms and courses that we genuinely believe can help
+    users build skills and improve their careers.
+  </p>
 
-    <p>
-      If you have any questions about our affiliate relationships, feel free to contact us.
-    </p>
-  </section>
+  <p>
+    JobUpskill is an independent educational resource and is not officially
+    affiliated with Alison.
+  </p>
 </main>
 
 <footer>
-  <p>© 2026 Remote Skills Hub. All rights reserved.</p>
+  <div class="container">
+    <p>© <span id="year"></span> JobUpskill</p>
+    <p>
+      <a href="/JobUpskill/privacy-policy.html">Privacy Policy</a>
+      <a href="/JobUpskill/terms.html">Terms & Conditions</a>
+    </p>
+  </div>
 </footer>
 
-<script src="/assets/js/main.js"></script>
+<script src="/JobUpskill/assets/js/main.js"></script>
 </body>
 </html>
