--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,62 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy</title>
-  <meta name="robots" content="noindex">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>Privacy Policy | JobUpskill</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/JobUpskill/assets/css/style.css">
 </head>
 <body>
 
-<header>
-  <div class="container">
-    <h1>Privacy Policy</h1>
-    <p class="subtitle">Your privacy matters</p>
+<header class="site-header">
+  <div class="container header-inner">
+    <a href="/JobUpskill/" class="logo">
+      <span class="logo-highlight">Job</span>Upskill
+    </a>
   </div>
 </header>
 
 <main class="container">
-  <section>
-    <h2>Information We Collect</h2>
-    <p>
-      This website does not collect personal information unless you voluntarily provide it
-      (for example, by contacting us via email).
-    </p>
+  <h1>Privacy Policy</h1>
 
-    <h2>Affiliate Links</h2>
-    <p>
-      Some pages contain affiliate links. When you click these links, third-party websites
-      (such as Alison) may use cookies or tracking technologies according to their own privacy policies.
-    </p>
+  <p>
+    JobUpskill respects your privacy. This page explains what information we
+    collect and how it is used.
+  </p>
 
-    <h2>Cookies</h2>
-    <p>
-      We do not use cookies directly. However, third-party services linked from this site
-      may use cookies to track referrals or usage statistics.
-    </p>
+  <h2>Information We Collect</h2>
+  <p>
+    We do not collect personal information directly. However, third-party
+    services (such as analytics or affiliate partners) may collect data through
+    cookies or tracking technologies.
+  </p>
 
-    <h2>Analytics</h2>
-    <p>
-      We may use privacy-friendly analytics tools to understand how visitors interact with the site.
-      These tools do not collect personally identifiable information.
-    </p>
+  <h2>Cookies</h2>
+  <p>
+    Cookies may be used to track affiliate referrals or analyze website traffic.
+    You can disable cookies in your browser settings.
+  </p>
 
-    <h2>External Links</h2>
-    <p>
-      This website contains links to external websites. We are not responsible for the content
-      or privacy practices of those sites.
-    </p>
+  <h2>Third-Party Links</h2>
+  <p>
+    This website contains links to third-party websites. We are not responsible
+    for the privacy practices of those sites.
+  </p>
 
-    <h2>Consent</h2>
-    <p>
-      By using this website, you consent to this Privacy Policy.
-    </p>
-  </section>
+  <h2>Consent</h2>
+  <p>
+    By using JobUpskill, you consent to this privacy policy.
+  </p>
 </main>
 
 <footer>
-  <p>© 2026 Remote Skills Hub. All rights reserved.</p>
+  <div class="container">
+    <p>© <span id="year"></span> JobUpskill</p>
+    <p>
+      <a href="/JobUpskill/affiliate-disclosure.html">Affiliate Disclosure</a>
+      <a href="/JobUpskill/terms.html">Terms & Conditions</a>
+    </p>
+  </div>
 </footer>
 
-<script src="/assets/js/main.js"></script>
+<script src="/JobUpskill/assets/js/main.js"></script>
 </body>
 </html>
