--- a/terms.html
+++ b/terms.html
@@ -2,57 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Terms & Conditions</title>
-  <meta name="robots" content="noindex">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>Terms & Conditions | JobUpskill</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/JobUpskill/assets/css/style.css">
 </head>
 <body>
 
-<header>
-  <div class="container">
-    <h1>Terms & Conditions</h1>
-    <p class="subtitle">Website usage terms</p>
+<header class="site-header">
+  <div class="container header-inner">
+    <a href="/JobUpskill/" class="logo">
+      <span class="logo-highlight">Job</span>Upskill
+    </a>
   </div>
 </header>
 
 <main class="container">
-  <section>
-    <h2>Use of This Website</h2>
-    <p>
-      By accessing and using this website, you agree to be bound by these Terms and Conditions.
-      If you do not agree, please do not use the site.
-    </p>
+  <h1>Terms & Conditions</h1>
 
-    <h2>Educational Content</h2>
-    <p>
-      All content provided is for informational and educational purposes only.
-      We do not guarantee job placement, income, or results from any courses or resources mentioned.
-    </p>
+  <p>
+    By accessing JobUpskill, you agree to the following terms and conditions.
+  </p>
 
-    <h2>Affiliate Relationships</h2>
-    <p>
-      This website participates in affiliate marketing programs.
-      We may earn commissions when users click affiliate links and complete actions on partner websites.
-    </p>
+  <h2>Educational Purpose</h2>
+  <p>
+    All content is provided for informational and educational purposes only and
+    does not constitute professional advice.
+  </p>
 
-    <h2>Limitation of Liability</h2>
-    <p>
-      We are not responsible for any losses, damages, or outcomes resulting from
-      the use of information provided on this website.
-    </p>
+  <h2>Affiliate Relationships</h2>
+  <p>
+    JobUpskill may earn commissions through affiliate links. This does not
+    influence our content or recommendations.
+  </p>
 
-    <h2>Changes to Terms</h2>
-    <p>
-      These terms may be updated at any time without prior notice.
-      Continued use of the site constitutes acceptance of the updated terms.
-    </p>
-  </section>
+  <h2>Limitation of Liability</h2>
+  <p>
+    We are not responsible for outcomes resulting from the use of information
+    found on this website.
+  </p>
+
+  <h2>Changes</h2>
+  <p>
+    These terms may be updated at any time without notice.
+  </p>
 </main>
 
 <footer>
-  <p>© 2026 Remote Skills Hub. All rights reserved.</p>
+  <div class="container">
+    <p>© <span id="year"></span> JobUpskill</p>
+    <p>
+      <a href="/JobUpskill/affiliate-disclosure.html">Affiliate Disclosure</a>
+      <a href="/JobUpskill/privacy-policy.html">Privacy Policy</a>
+    </p>
+  </div>
 </footer>
 
-<script src="/assets/js/main.js"></script>
+<script src="/JobUpskill/assets/js/main.js"></script>
 </body>
 </html>
